--- a/src/components/Sections/Contact Sections/DefaultContact/DefaultContact.astro
+++ b/src/components/Sections/Contact Sections/DefaultContact/DefaultContact.astro
@@ -1,10 +1,4 @@
 ---
-import type { ContactBlock, SocialLink, LexicalContent } from "@utils/payload/types";
-interface Props extends ContactBlock {
-    socialLinks: SocialLink[];
-    operatingHours: LexicalContent;
-}
-
 import "./contact.css";
 import Container from "@components/Container.astro";
 import { extractLexicalText } from "@utils/payload/helpers";
@@ -23,7 +17,7 @@ const props = Astro.props;
                 <h2>{props.title}</h2>
                 <address class="two_column_contact__phone">
                     {
-                        props.contact.phone.map((phone) => (
+                        props.contact.phone.map((phone: any) => (
                             <IconLink
                                 href={phone.number}
                                 type={phone.type}
@@ -35,7 +29,7 @@ const props = Astro.props;
 
                 <address class="two_column_contact__email">
                     {
-                        props.contact.email.map((email) => (
+                        props.contact.email.map((email: any) => (
                             <IconLink
                                 href={email.email}
                                 type="email"
@@ -47,7 +41,7 @@ const props = Astro.props;
                 {
                     props.socialLinks.length > 0 && (
                         <div class="social_links">
-                           {props.socialLinks.map((social) => (
+                           {props.socialLinks.map((social: any) => (
                             <SocialLinkComponent href={social.url} type={social.platform} text={social.title} />
                            ))}
                         </div>
@@ -55,7 +49,6 @@ const props = Astro.props;
                 }
                 <div class="working_hours">
                     <slot set:html={props.operatingHours} />
-                    <!-- <InfoCard cards={[operating_hours]} /> -->
                 </div>
             </article>
 
