--- a/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
+++ b/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
@@ -6,6 +6,7 @@ import "./section.css";
 import CustomImage from "@components/CustomImage.astro";
 import { extractLexicalText } from "@utils/payload/helpers";
 const props = Astro.props;
+console.log(props)
 ---
 
 <div
@@ -15,7 +16,7 @@ const props = Astro.props;
     data-offscreen
 >
     <Container>
-        <div class="content-with-media__content_wrapper" data-direction={props["text position"]}>
+        <div class="content-with-media__content_wrapper" data-direction={props.position}>
             <article class="content-with-media__article">
                 <header class="content-with-media__header">
                     <h2>{props.title}</h2>
