feat: update ContentWithMediaBlock type definition and related imports

--- a/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
+++ b/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
@@ -1,6 +1,6 @@
 ---
-import type { ContentBlock } from "@utils/payload/types";
-interface Props extends ContentBlock {}
+import type { ContentWithMediaBlock } from "@utils/payload/types";
+interface Props extends ContentWithMediaBlock {}
 import Container from "@components/Container.astro";
 import "./section.css";
 import CustomImage from "@components/CustomImage.astro";
