feat: update OverlapContact component and styles; modify direction prop in ContactBlock type

--- a/src/components/Footer/FloatingFooter/footer.css
+++ b/src/components/Footer/FloatingFooter/footer.css
@@ -1,7 +1,7 @@
 .floating_footer {
     color: var(--clr-neutral-50);
     /* padding: var(--size-4) 0; */
-    padding-top: 0;
+    /* padding-top: 0; */
     background-color: var(--clr-neutral-50);
 }
 .floating_footer__content {
