--- a/src/components/Sections/Contact Sections/OverlapContact/contact.css
+++ b/src/components/Sections/Contact Sections/OverlapContact/contact.css
@@ -51,7 +51,7 @@
 
         border-radius: var(--size-3);
 
-        background: var(--clr-primary) border-box;
+        background: linear-gradient(white 0 0) padding-box, var(--clr-primary) border-box;
         overflow: hidden;
     }
 
