--- a/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
+++ b/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
@@ -16,7 +16,7 @@ console.log(props)
     data-offscreen
 >
     <Container>
-        <div class="content-with-media__content_wrapper" data-direction={props.position}>
+        <div class="content-with-media__content_wrapper" data-position={props.position}>
             <article class="content-with-media__article">
                 <header class="content-with-media__header">
                     <h2>{props.title}</h2>
