--- a/src/components/Sections/ContentWithMedia/section.css
+++ b/src/components/Sections/ContentWithMedia/section.css
@@ -37,13 +37,13 @@
 }
 
 .content-with-media__image {
-    max-height: 400px;
+    /* max-height: 400px; */
     width: 100%;
     height: 100%;
 }
 
 /* Tablet and up */
-@media (min-width: 800px) {
+@media (min-width: 768px) {
     .content-with-media__content_wrapper {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -52,23 +52,59 @@
         gap: var(--size-8);
     }
 
-    .content-with-media__content_wrapper > * {
+    .content-with-media__content_wrapper>* {
         grid-row: 1 / -1;
     }
 
-    .content-with-media__content_wrapper[data-direction="right"] .content-with-media__article {
+    .content-with-media__content_wrapper[data-position="right"] .content-with-media__article {
         grid-column: 1 / 2;
     }
 
-    .content-with-media__content_wrapper[data-direction="right"] .content-with-media__image_wrapper {
+    .content-with-media__content_wrapper[data-position="right"] .content-with-media__image_wrapper {
         grid-column: 2 / -1;
     }
 
-    .content-with-media__content_wrapper[data-direction="left"] .content-with-media__image_wrapper {
+    .content-with-media__content_wrapper[data-position="left"] .content-with-media__image_wrapper {
         grid-column: 1 / 2;
     }
 
-    .content-with-media__content_wrapper[data-direction="left"] .content-with-media__article {
+    .content-with-media__content_wrapper[data-position="left"] .content-with-media__article {
         grid-column: 2 / -1;
+    }
+
+    .content-with-media__content_wrapper[data-position="top"] {
+        display: grid;
+        grid-template-columns: 3vw 1fr 3vw;
+        grid-template-rows: 3vw max-content 3vw;
+        height: auto;
+    }
+
+    .content-with-media__content_wrapper[data-position="top"] .content-with-media__image_wrapper {
+        grid-column: 1 / -1;
+        grid-row: 1 / -1;
+
+        width: 100%;
+        height: 100%;
+        
+    }
+    
+    .content-with-media__image {
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+    }
+    
+    .content-with-media__content_wrapper[data-position="top"] .content-with-media__article {
+        grid-column: 2 / -2;
+        grid-row: 2 / -2;
+        
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        max-height: max-content;
+
+        padding: var(--size-8);
+
+        background-color: oklch(from var(--clr-primary-lighter) l c h / .85);
     }
 }
