--- a/src/components/PageNavigation/StickyNav/StickyNav.astro
+++ b/src/components/PageNavigation/StickyNav/StickyNav.astro
@@ -63,7 +63,7 @@ const pageLinks = links.map((link) =>
                                 href={link.href}
                                 class={
                                     index === pageLinks?.length - 1
-                                        ? "sticky-nav__link sticky-nav__link--cta"
+                                        ? "sticky-nav__link btn-primary"
                                         : "sticky-nav__link"
                                 }
                             >
