--- a/src/components/Sections/ContentWithMedia/section.css
+++ b/src/components/Sections/ContentWithMedia/section.css
@@ -37,13 +37,13 @@
 }
 
 .content-with-media__image {
-    /* max-height: 400px; */
+    max-height: 400px;
     width: 100%;
     height: 100%;
 }
 
 /* Tablet and up */
-@media (min-width: 768px) {
+@media (min-width: 769px) {
     .content-with-media__content_wrapper {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
