--- a/src/components/Hero/AlternateVerticalHero/AlternateVerticalHero.astro
+++ b/src/components/Hero/AlternateVerticalHero/AlternateVerticalHero.astro
@@ -27,7 +27,7 @@ const props = Astro.props;
             <div>
                 <p>{props.excerpt}</p>
                 <a
-                    class="btn btn-primary btn-md"
+                    class="btn btn--primary "
                     href="#contact"
                     style="margin-top: var(--size-3);">Let's Work Together</a
                 >
