--- a/src/components/Hero/DefaultHero/DefaultHero.astro
+++ b/src/components/Hero/DefaultHero/DefaultHero.astro
@@ -24,7 +24,7 @@ const props = Astro.props;
                 <p>{props.excerpt}</p>
                 <a
                     href="#contact"
-                    class="btn btn-md btn-primary"
+                    class="btn  btn--primary"
                     style="margin-top: 0.825rem;">Let's Talk</a
                 >
             </article>
