--- a/src/components/Hero/WavyHero/WavyHero.astro
+++ b/src/components/Hero/WavyHero/WavyHero.astro
@@ -28,13 +28,13 @@ const { title, image, cover, excerpt } = Astro.props;
                 <div class="wavy_hero__btn_wrapper">
                     <a
                         href="#contact"
-                        class="btn btn-primary btn-md wavy_hero__cta"
+                        class="btn btn--primary  wavy_hero__cta"
                     >
                         Let's Work Together
                     </a>
                     <a
                         href="#product"
-                        class="btn btn-outline btn-md wavy_hero__cta"
+                        class="btn btn--outline  wavy_hero__cta"
                     >
                         Explore what we offer
                     </a>
