--- a/src/components/Sections/Contact Sections/MultiLocation/MultiLocation.astro
+++ b/src/components/Sections/Contact Sections/MultiLocation/MultiLocation.astro
@@ -3,7 +3,7 @@ import "./style.css";
 import type { LocationType } from "@utils/types";
 import InfoCard from "@components/Cards/Info/InfoCard.astro";
 import Container from "@components/Container.astro";
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-iconify";
 const props = Astro.props;
 ---
 
