--- a/src/components/Sections/CtaSection/VerticalImageCta/VerticalImageCta.astro
+++ b/src/components/Sections/CtaSection/VerticalImageCta/VerticalImageCta.astro
@@ -5,7 +5,7 @@ interface Props extends TwoImageCallToActionBlock {
 }
 
 import "./style.css";
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-iconify";
 import CustomImage from "@components/CustomImage.astro";
 import Container from "@components/Container.astro";
 import InfoCard from "@components/Cards/Info/InfoCard.astro";
