--- a/src/components/Sections/Stats/StatsGrid/StatsGrid.astro
+++ b/src/components/Sections/Stats/StatsGrid/StatsGrid.astro
@@ -12,7 +12,7 @@ interface Card {
     icon_name: string;
 }
 
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-iconify";
 import "./stats.css"
 import Container from "@components/Container.astro";
 const {cards, data, highlight} = Astro.props
