--- a/src/components/Sections/VerticalImages/VerticalImages.astro
+++ b/src/components/Sections/VerticalImages/VerticalImages.astro
@@ -10,7 +10,7 @@ interface Props {
     core_values?: string
 }
 import "./section.css";
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-iconify";
 import CustomImage from "@components/CustomImage.astro";
 const { data, core_values } = Astro.props;
 ---
