--- a/src/components/Cards/ColourfulCard/ColourfulCard.astro
+++ b/src/components/Cards/ColourfulCard/ColourfulCard.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-iconify";
 import "./card.css"
 interface Card {
     title: string;
