--- a/src/components/Cards/Info/InfoCard.astro
+++ b/src/components/Cards/Info/InfoCard.astro
@@ -9,7 +9,7 @@ interface Props {
     direction?: "column" | "row";
 }
 import "./card.css";
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-iconify";
 const { cards, direction = "row" } = Astro.props;
 ---
 
