--- a/src/components/Hero/SplitHero/SplitHero.astro
+++ b/src/components/Hero/SplitHero/SplitHero.astro
@@ -3,33 +3,28 @@ import type { HeroBlock } from "@utils/payload/types";
 interface Props extends HeroBlock {}
 
 import Container from "@components/Container.astro";
-import "./hero.css";
+import "./style.css";
 import CustomImage from "@components/CustomImage.astro";
-
 const props = Astro.props;
 ---
 
-<header class="vertical_hero content_section bg--primary-darker">
+<header class="split-hero">
     <Container>
-        <article class="vertical_hero__content" data-direction="column">
-            <h1>{props.heading}</h1>
-            <div>
+        <div class="split-hero__wrapper">
+            <article class="split-hero__content">
+                <h1 class="split-hero__title">{props.heading}</h1>
                 <p>{props.excerpt}</p>
                 <a
-                    class="btn btn--primary "
                     href="#contact"
-                    style="margin-top: var(--size-3);"
-                    >Let's Work Together</a
+                    class="btn  btn--primary"
+                    style="margin-top: 0.825rem;">Let's Talk</a
                 >
-            </div>
-        </article>
-
-        <div class="vertical_hero__image_wrapper breakout">
+            </article>
             <CustomImage
-                classlist="vertical_hero__image"
                 eager={true}
                 image={props.cover}
                 size="large"
+                classlist="split-hero__image"
             />
         </div>
     </Container>
