--- a/src/components/PageNavigation/Navigation/FixedNav/FixedNav.astro
+++ b/src/components/PageNavigation/Navigation/FixedNav/FixedNav.astro
@@ -1,6 +1,6 @@
 ---
 import Container from "@components/Container.astro";
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-iconify";
 import { getImageUrl } from "@utils/pocketbase";
 import "./nav.css";
 import { Image, inferRemoteSize } from "astro:assets";
