--- a/src/components/Sections/Contact Sections/OverlapContact/contact.css
+++ b/src/components/Sections/Contact Sections/OverlapContact/contact.css
@@ -7,7 +7,7 @@
 
     /* border-radius: var(--size-2); */
 
-    background: var(--clr-primary) border-box;
+    background: var(--clr-section-highlight) border-box;
     overflow: hidden;
 }
 
