--- a/src/components/Sections/CtaSection/SimpleCallToAction/SimpleCallToAction.astro
+++ b/src/components/Sections/CtaSection/SimpleCallToAction/SimpleCallToAction.astro
@@ -3,7 +3,7 @@ import type {SimpleCallToActionBlock} from '@utils/payload/types'
 interface Props extends SimpleCallToActionBlock {}
 import Container from "@components/Container.astro";
 import "./cta.css"
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-iconify";
 
 import CustomImage from "@components/CustomImage.astro";
 import Cards from "@components/Cards/Cards.astro";
@@ -15,7 +15,7 @@ const props = Astro.props;
         <section class="small_cta">
             <h2 class="smal_cta__title">{props.heading}</h2>
             <slot set:html={extractLexicalText(props.description)} />
-            <a href="#contact" class="cta__link btn btn-md btn-primary">
+            <a href="#contact" class="cta__link btn  btn--primary">
                 {props.buttonText}
             </a>
         </section>
