--- a/src/components/Sections/CtaSection/ThreeImageCta/ThreeImageCta.astro
+++ b/src/components/Sections/CtaSection/ThreeImageCta/ThreeImageCta.astro
@@ -5,7 +5,7 @@ interface Props extends ImageGridCallToActionBlock {
 }
 
 import "./style.css";
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-iconify";
 import CustomImage from "@components/CustomImage.astro";
 import Container from "@components/Container.astro";
 import InfoCard from "@components/Cards/Info/InfoCard.astro";
@@ -26,7 +26,7 @@ const props = Astro.props;
                     <slot set:html={extractLexicalText(props.body)} />
     
                     <div class="btn_wrapper">
-                        <a href="#contact" class="btn btn-md btn-secondary btn-outline"
+                        <a href="#contact" class="btn  btn--secondary btn--outline"
                             >Let's Talk</a
                         >
                     </div>
