--- a/src/components/Sections/Stats/WhyChooseUsColumn/WhyChooseUsColumn.astro
+++ b/src/components/Sections/Stats/WhyChooseUsColumn/WhyChooseUsColumn.astro
@@ -2,7 +2,7 @@
 import type { WhyChooseUsColumnBlock } from "@utils/payload/types";
 interface Props extends WhyChooseUsColumnBlock {}
 
-import { Icon } from "astro-icon/components";
+import { Icon } from "astro-iconify";
 import "./style.css";
 import Container from "@components/Container.astro";
 import CustomImage from "@components/CustomImage.astro";
